# dtc-jackal

./: .gitignore  README.md  bringup.bash  docker-compose.yml
acconeer/: Dockerfile  README.md  README.txt  build.bash  entrypoint.bash  entrypoint.sh  run.bash
acconeer/acconeer_radar_sensor/: CMakeLists.txt  package.xml
acconeer/acconeer_radar_sensor/launch/: radar.launch
acconeer/acconeer_radar_sensor/msg/: Presence.msg  Respiration.msg
acconeer/acconeer_radar_sensor/src/: check_python_executable.py  respiration_radar_sensor.py
acconeer/udev/: 49-acconeer-radar.rules  50-ft4222.rules
autonomy/: claude.py
config/: radio_configs.yaml  robot_configs.yaml  topic_configs.yaml
data/: yolov8-seg.yaml
data/2024_10_29/: record.bash
ebreather/: Dockerfile  README.md  build.bash  entrypoint.bash  run.bash
jackal/: .gitignore  Dockerfile  README.md  build.bash  entrypoint.bash  entrypoint.sh  join.bash  run.bash
jackal/config/: robot_configs.yaml  zed_f9p.yaml
jackal/launch/: camera.launch
jackal/udev/: 50-ft4222.rules  91-rtk-facet-f9p.rules  92-acconeer-radar.rules
jackal/ws/src/waypoint_nav/: CMakeLists.txt  README.md  package.xml  setup.py
jackal/ws/src/waypoint_nav/launch/: nav.launch
jackal/ws/src/waypoint_nav/scripts/: waypoint_nav_node.py
jackal/ws/src/waypoint_nav/src/waypoint_nav/: control.py  converter.py  localizer.py  plan_reader.py
masking/: Dockerfile  README.md  entrypoint.bash  join.bash  run.bash
masking/yolov8-ros/launch/: mask.launch
masking/yolov8-ros/src/: mask_ros.py  yolo_ir_v1.py
masking/yolov8-ros/src/yolov8_ros/: IR_utils.py  utils.py
mtts-can/: Dockerfile  README.md  build.bash  entrypoint.bash  run.bash
mtts-can/mtts-can-ros/: CMakeLists.txt  package.xml  setup.py
mtts-can/mtts-can-ros/config/: params.yaml
mtts-can/mtts-can-ros/launch/: mtts.launch
mtts-can/mtts-can-ros/scripts/: predict_ros.py
odom/: Dockerfile  build.bash  entrypoint.bash  run.bash
orchestration/: Dockerfile  README.md  build.bash  entrypoint.bash  join.bash  run.bash
orchestration/acconeer_radar_sensor/src/: respiration_radar_plot.py  respiration_radar_sensor.py
orchestration/config/: database_translators_publishers.launch  robot_configs.yaml  sensor_services.yml  tags.yaml  topic_configs.yaml
orchestration/dtc_scripts/: CMakeLists.txt  README.md  package.xml
orchestration/dtc_scripts/scripts/: xbee_reciever.py  xbee_reciever_mavros_node.py  xbee_sender.py
orchestration/gone/: CMakeLists.txt  README.md  package.xml  setup.py
orchestration/gone/launch/: orchestrator.launch
orchestration/gone/msg/: GroundDetection.msg  GroundImage.msg
orchestration/gone/scripts/: monitor_node.py  orchestrator_node.py
orchestration/gone/src/gone/: monitor.py  orchestrator.py  services.py
orchestration/gone/test/: trigger_test.py
orchestration/resizer/: CMakeLists.txt  README.md  package.xml
orchestration/resizer/include/amm/: handler.hpp  matrix.hpp  pixel_localizer.hpp
orchestration/resizer/launch/: amm.launch  map.rviz
orchestration/resizer/src/: handler.cpp  matrix.cpp  node.cpp  pixel_localizer.cpp
orchestration/resizer/test/: test.cpp
orchestration/tdd2/: CMakeLists.txt  package.xml  setup.py
orchestration/tdd2/config/: blackfly.yaml  ovc.yaml  ovc_ros.yaml
orchestration/tdd2/launch/: center_img_node.launch  sync.launch  tdd2.launch  tdd2_replay.launch
orchestration/tdd2/msg/: TDDetection.msg  UTMFix.msg
orchestration/tdd2/scripts/: bag_test.py  center_img_node.py  detection_and_gps.py  image_repub.py  rectifier.py  selector.py  sync.py
orchestration/tdd2/src/tdd2/: pose_frames.py  pose_handler.py  selector.py  synchronizer.py  yolo_localizer.py
orchestration/tdd2/test/: run2.csv  test_localization.py
orchestration/utils/: bag_to_images__GroundImage.py
ouster-timesync/: Dockerfile  entrypoint.bash  run-timesync.bash
pyvhr/: Dockerfile  README.md  build.bash  compose.yml  entrypoint.bash  entrypoint.sh  requirements.txt  run.bash
pyvhr/pyVHR/: setup.py  test.py
pyvhr/pyVHR/BVP/: methods.py
pyvhr/pyVHR/analysis/: pipeline.py
pyvhr/pyVHR/extraction/: sig_processing.py  skin_extraction_methods.py
pyvhr/rosvhr/scripts/: pyvhr_node.py
sensors/: Dockerfile  build.bash  entrypoint.bash  join.bash  run.bash
sensors/config/: boson.yaml
sensors/launch/: camera.launch
sensors/sensors/: CMakeLists.txt  package.xml
sensors/sensors/launch/: sensors.launch
speaker/: Dockerfile  README.md  build.bash  entrypoint.bash  join.bash
speaker/speakerer/: CMakeLists.txt  package.xml
speaker/speakerer/launch/: whisperer.launch
speaker/speakerer/src/: mic_node.py  speaker_node.py
whisper/: Dockerfile  README.md  build.bash  entrypoint.bash  entrypoint.sh  join.bash  run.bash
whisper/whisperer/: CMakeLists.txt  package.xml
whisper/whisperer/launch/: whisperer.launch
whisper/whisperer/src/: mic_node.py  whisperer_node.py
